--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,3 +1,3 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}<h1>Bien le bonjour! Tu te trouves a la page {{ page }}</h1>{% endblock %}
+{% block body %}<h1>Bien le bonjour! Tu te trouves a la page </h1>{% endblock %}
