--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,3 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}<h1>Bien le bonjour! Tu te trouves a la page {{ page }}</h1>{% endblock %}
+{% block title %} All programs {% endblock %}
+
+{% block body %}
+    <h1>Toutes les series de la table program : </h1>
+    {{ dump() }}
+    {% for program in programs %}
+        <div>
+            <h2> {{  loop.index }} / {{ program.title }} - Categorie : {{ program.category.name }}</h2>
+            <p>{{ program.summary }}</p>
+            {# Lien vers la fiche de la série : #}
+            <a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
+        </div>
+    {% else %}
+        Aucune série de trouvée.
+    {% endfor %}
+
+    <a href="{{  path('app_index') }}">
+        Retour à l'accueil
+    </a>
+{% endblock %}
