--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -5,13 +5,20 @@
 
 {% block body %}
 
+    {% for season in program.seasons %}
+        <p>{{ season.description }}{{ season.year }}</p>
+        <p>{{ program.id }}</p>
+        <p>{{ season.id }}</p>
+         <a href="{{ path("program_season_show", { programId: program.id, seasonId: season.id }) }}">Voir la fiche</a>
+        {% dump(season.id) %}
+    {% endfor %}
     <div class="media">
         <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
         <div class="media-body">
             <h1 class="mt-0">{{ program.title }}</h1>
             <p>{{ program.summary }}</p>
             <p>Catégorie : {{ program.category.name }}</p>
-            {{ dump() }}
+
         </div>
     </div>
 
