--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -12,5 +12,6 @@
     {% else %}
         Aucune categories trouvées.
     {% endfor %}
+    <a href="{{ path("category_new") }}">Ajouter une catégorie</a>
 
 {% endblock %}
