--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -23,6 +23,11 @@
         </div>
     </div>
 
+    <a href="{{ path('program_new') }}">
+        ajouter un program
+    </a>
+    <br>
+
     <a href="{{ path('category_index') }}">
         Retour à la liste des categories
     </a>
