--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -9,7 +9,7 @@
         <p>{{ season.description }}{{ season.year }}</p>
         <p>{{ program.id }}</p>
         <p>{{ season.id }}</p>
-         <a href="{{ path("program_season_show", { programId: program.id, seasonId: season.id }) }}">Voir la fiche</a>
+         <a href="{{ path("program_season_show", { program_id: program.id, season_id: season.id }) }}">Voir la fiche</a>
         {% dump(season.id) %}
     {% endfor %}
     <div class="media">
