--- a/templates/program/showSeason.html.twig
+++ b/templates/program/showSeason.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} All programs {% endblock %}
+{% block title %}{{ program.title }} saison {{season.id}} {% endblock %}
 
 {% block body %}
     {% dump(season) %}
@@ -10,8 +10,8 @@
     <p>liste des épisodes :</p>
     <ul>
     {% for episode in season.episodes %}
-       <li>Episode {{ episode.number }} : {{ episode.title}}</li>
-
+        <a href="{{ path("program_episode_show", { program_id: program.id, season_id: season.id , episode_id: episode.id }) }}"> <li>Episode {{ episode.number }} : {{ episode.title}}</li>
+        </a>
 
 
 
