--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -4,7 +4,7 @@
 {% block title %}Série #{{ program.id }}{% endblock %}
 
 {% block body %}
-
+    {{ dump() }}
     {% for season in program.seasons %}
         <p>{{ season.description }}{{ season.year }}</p>
         <p>{{ program.id }}</p>
@@ -21,6 +21,14 @@
 
         </div>
     </div>
+    <strong>Acteurs :</strong>
+    <ul>
+        {% for actor in program.actors %}
+            <li>{{ actor.name }} </li>
+        {% else %}
+            <li>Aucun acteur pour cette série</li>
+        {% endfor %}
+    </ul>
 
     <a href="{{ path('program_index') }}">
         Retour à la liste des programmes
