--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -27,7 +27,10 @@
         ajouter un program
     </a>
     <br>
-
+    <a href="{{ path('program_index') }}">
+        index des séries
+    </a>
+    <br>
     <a href="{{ path('category_index') }}">
         Retour à la liste des categories
     </a>
