--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -18,6 +18,6 @@
     <a href="{{ path("program_new") }}">Ajouter une série</a>
 <br>
     <a href="{{  path('category_index') }}">
-        Retour aux categoris
+        Retour aux categoris <i class="fas fa-angle-double-right"></i>
     </a>
 {% endblock %}
