--- a/templates/program/showEpisode.html.twig
+++ b/templates/program/showEpisode.html.twig
@@ -8,6 +8,6 @@
     <br>
     <P> en savoir plus? Abonne toi!!!! <3 merci pour tout c'est grace a vous que l'on peut accomplir notre tache et délivrer du bonheur tous, peace mon frère. </P>
 <br>
-<a href="{{ path("program_season_show", { program_id: program.id, season_id: season.id }) }}">revenir a la liste des épisodes</a>
-
+<a href="{{ path("program_season_show", { program_slug: program.slug, season_id: season.id }) }}">revenir a la liste des épisodes</a>
+    <a href="{{ path('episode_edit', {episode_slug: episode.slug}) }}">edit</a>
 {% endblock %}
