--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -10,7 +10,7 @@
             <h2> {{  loop.index }} / {{ program.title }} - Categorie : {{ program.category.name }}</h2>
             <p>{{ program.summary }}</p>
             {# Lien vers la fiche de la série : #}
-            <a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
+            <a href="{{ path("program_show", { slug: program.slug }) }}">Voir la fiche</a>
         </div>
     {% else %}
         Aucune série de trouvée.
