--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -24,7 +24,12 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    {% if app.user %}
+                        {{ app.user.email }}
+                        <a href="{{ path('app_logout') }}"> Se déconnecter</a>
+                    {% else %}
+                        <a href="{{ path('app_login') }}"> Se connecter</a>
+                    {% endif %}
                 </li>
             </ul>
             <form class="d-flex">
